k8s/deploy.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deploy # Deployment 이름
spec:
  replicas: 2 # 항상 Pod 2개 유지

  # Deployment가 관리할 Pod를 식별하는 기준
  selector:
    matchLabels:
      app: hello # 이 label을 가진 Pod만 관리

  # 여기서부터 "Pod 정의"
  template:
    metadata:
      labels:
        app: hello # ← Service가 이걸 보고 Pod 찾음
    spec:
      containers:
        - name: nginx # 컨테이너 이름
          image: nginx:alpine # 사용할 이미지
          ports:
            - containerPort: 80

          # 리소스 요청/제한 설정
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "200m"

          # ConfigMap / Secret을 환경변수로 주입
          volumeMounts:
            - mountPath: /data
              name: hello-volume

      # Pod 단위의 Volume 정의
      volumes:
        - name: hello-volume
          emptyDir: {} # Pod가 살아있는 동안만 유지되는 임시 저장소
